src/objects/vlocity_ins__FormularyDrug__c.object
<CustomObject>
    <description>List of generic and brand name drugs available under a health network formulary. Master-detail child object of Formulary.</description>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <description>A description of of the Formulary Drug.</description>
        <inlineHelpText>A description of of the Formulary Drug.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DrugId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Drug</label>
        <referenceTo>vlocity_ins__Drug__c</referenceTo>
        <relationshipLabel>Formulary Drugs</relationshipLabel>
        <relationshipName>FormularyDrugs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveEndDate__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveStartDate__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FillLimitForm__c</fullName>
        <label>Fill Limit Form</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>12 Hrs Patch</fullName>
                </value>
                <value>
                    <fullName>24 Hrs Patch</fullName>
                </value>
                <value>
                    <fullName>72 Hrs Patch</fullName>
                </value>
                <value>
                    <fullName>84 Hrs Patch</fullName>
                </value>
                <value>
                    <fullName>9 Hrs Patch</fullName>
                </value>
                <value>
                    <fullName>Cake</fullName>
                </value>
                <value>
                    <fullName>Capsule</fullName>
                </value>
                <value>
                    <fullName>Cream</fullName>
                </value>
                <value>
                    <fullName>Cream (Augmented)</fullName>
                </value>
                <value>
                    <fullName>Douche</fullName>
                </value>
                <value>
                    <fullName>Drug Implant</fullName>
                </value>
                <value>
                    <fullName>Dry-Powder Inhaler (DPI)</fullName>
                </value>
                <value>
                    <fullName>Enema</fullName>
                </value>
                <value>
                    <fullName>Film</fullName>
                </value>
                <value>
                    <fullName>Foam</fullName>
                </value>
                <value>
                    <fullName>Gas</fullName>
                </value>
                <value>
                    <fullName>Gel</fullName>
                </value>
                <value>
                    <fullName>Gel (Augmented)</fullName>
                </value>
                <value>
                    <fullName>Gum</fullName>
                </value>
                <value>
                    <fullName>Inhaler</fullName>
                </value>
                <value>
                    <fullName>Irrigation Solution</fullName>
                </value>
                <value>
                    <fullName>Lotion</fullName>
                </value>
                <value>
                    <fullName>Lotion (Augmented)</fullName>
                </value>
                <value>
                    <fullName>Medicated Bar Soap</fullName>
                </value>
                <value>
                    <fullName>Medicated Liquid Soap</fullName>
                </value>
                <value>
                    <fullName>Medicated Shampoo</fullName>
                </value>
                <value>
                    <fullName>Medicated Tape</fullName>
                </value>
                <value>
                    <fullName>Metered Dose Inhaler (MDI)</fullName>
                </value>
                <value>
                    <fullName>Ointment</fullName>
                </value>
                <value>
                    <fullName>Ointment (Augmented)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__FormularyId__c</fullName>
        <description>A link to the related Formulary, allowing for a Drug to be linked to one or more Formulary.</description>
        <inlineHelpText>A link to the related Formulary, allowing for a Drug to be linked to one or more Formulary.</inlineHelpText>
        <label>Formulary</label>
        <referenceTo>vlocity_ins__Formulary__c</referenceTo>
        <relationshipLabel>Formulary Drugs</relationshipLabel>
        <relationshipName>FormularyDrugs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FormularyTierId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A link to the related Formulary, allowing for a Drug to be linked to one or more Formulary.</description>
        <inlineHelpText>A link to the related Formulary, allowing for a Drug to be linked to one or more Formulary.</inlineHelpText>
        <label>Formulary Tier</label>
        <referenceTo>vlocity_ins__FormularyTier__c</referenceTo>
        <relationshipLabel>Formulary Drugs</relationshipLabel>
        <relationshipName>FormularyDrugs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__HasPriorAuthorization__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For certain prescription drugs, additional coverage requirements may be in place to ensure that members use the drugs safely.</description>
        <inlineHelpText>For certain prescription drugs, additional coverage requirements may be in place to ensure that members use the drugs safely.</inlineHelpText>
        <label>Has Prior Authorization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__HasStepTherapy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Step Therapy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates if the Formulary Drug is currently Active.</description>
        <inlineHelpText>Designates if the Formulary Drug is currently Active.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LimitFrequency__c</fullName>
        <label>Limit Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Plan Year</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__MaxFillAllowed__c</fullName>
        <label>Max Fill Allowed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__QuantityPerRefill__c</fullName>
        <description>The number of fiil limit forms per refill for this drug on this formulary definition.</description>
        <inlineHelpText>The number of fiil limit forms per refill for this drug on this formulary definition.</inlineHelpText>
        <label>Quantity Per Refill</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Formulary Drug</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>vlocity_ins__all_allfields</fullName>
        <columns>NAME</columns>
        <columns>vlocity_ins__Description__c</columns>
        <columns>vlocity_ins__DrugId__c</columns>
        <columns>vlocity_ins__MaxFillAllowed__c</columns>
        <columns>vlocity_ins__LimitFrequency__c</columns>
        <columns>vlocity_ins__QuantityPerRefill__c</columns>
        <columns>vlocity_ins__FormularyId__c</columns>
        <columns>vlocity_ins__FormularyTierId__c</columns>
        <columns>vlocity_ins__HasPriorAuthorization__c</columns>
        <columns>vlocity_ins__IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>all-allfields</label>
    </listViews>
    <nameField>
        <label>Formulary Drug Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Formulary Drugs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>